# pdfarranger-dev

./: NOTES.md  README.md  Win32.md  buildwin32  cmd.py  keyboard.py  outline.md  outline.py  pyproject.toml  setup.py  titi.py  toto.py
.github/workflows/: install.yml
data/: pdfarranger.ui
pdfarranger/: __main__.py  build_helper.py  core.py  croputils.py  exporter.py  metadata.py  pdfarranger.py  undo.py
tests/: test.py
